Fix preparation warning styling in v2 dark mode sheets.

--- a/less/v2/dark/actors.less
+++ b/less/v2/dark/actors.less
@@ -19,4 +19,9 @@
     border-color: var(--dnd5e-color-blue-gray-3);
     &:hover { background: var(--dnd5e-color-blue-gray-3); }
   }
+
+  dialog.warnings:is(#tooltip, .locked-tooltip) {
+    background: var(--dnd5e-color-dark-gray) url("../../ui/denim075.png");
+    li { border-color: var(--dnd5e-color-blue-gray-3); }
+  }
 }
